# networkx-graph-mcp-server

./: .gitignore  README.md  app.py  main.py  pyproject.toml
src/networkx_graph/: __init__.py  __main__.py  __version__.py  server.py  state_graph.py  visualization.py
web/static/: app.js  index.html  style.css
